--- a/packages/web/src/styles/_variables.sass
+++ b/packages/web/src/styles/_variables.sass
@@ -2,8 +2,8 @@
 $default-font: 'Roboto', 'Noto Sans Thai', sans-serif
 
 // Color
-$white:    #fff
-$black:    #000
+$white: #fff
+$black: #000
 
 $slate-50: #f8fafc
 $slate-100: #f1f5f9
@@ -172,3 +172,9 @@ $rose-700: #be123c
 $rose-800: #9f1239
 $rose-900: #881337
 $rose-950: #4c0519
+
+// devices
+$xl: 1280px
+$lg: 1024px
+$md: 768px
+$sm: 640px
